// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MatchWeek matches snapshot with matches 1`] = `
<div
  className="MatchWeek"
>
  <h2>
    Week 
    1
  </h2>
  <p>
    TestSeason
  </p>
  <Matches
    weeklyMatches={
      Array [
        Object {
          "AwayTeam": "TOT",
          "AwayTeamGoals": null,
          "HomeTeam": "ARS",
          "HomeTeamGoals": null,
          "ID": 1,
          "MatchWeek": 1,
          "Season": "TestSeason",
        },
        Object {
          "AwayTeam": "CHE",
          "AwayTeamGoals": null,
          "HomeTeam": "WHA",
          "HomeTeamGoals": null,
          "ID": 2,
          "MatchWeek": 1,
          "Season": "TestSeason",
        },
      ]
    }
  />
  <SSButton
    disabled={false}
    label="Sim Week"
    onClick={[Function]}
  />
  <SSButton
    disabled={true}
    label="Advance Week"
    onClick={[Function]}
  />
</div>
`;

exports[`MatchWeek renders with weekComplete 1`] = `
<div
  className="MatchWeek"
>
  <h2>
    Week 
    1
  </h2>
  <p>
    TestSeason
  </p>
  <Matches />
  <SSButton
    disabled={true}
    label="Sim Week"
    onClick={[Function]}
  />
  <SSButton
    disabled={false}
    label="Advance Week"
    onClick={[Function]}
  />
</div>
`;

exports[`MatchWeek renders without matches 1`] = `
<div
  className="MatchWeek"
>
  <h2>
    Week 
    1
  </h2>
  <p>
    TestSeason
  </p>
  <Matches />
  <SSButton
    disabled={false}
    label="Sim Week"
    onClick={[Function]}
  />
  <SSButton
    disabled={true}
    label="Advance Week"
    onClick={[Function]}
  />
</div>
`;

exports[`MatchWeek renders without season 1`] = `""`;
